# 8085

./: README.md  index.html
.github/workflows/: deploy.yml
api/: package-lock.json  package.json
api/src/: index.ts  routes.ts  simulatorController.ts
assets/: index.297f228e.js  index.6e609881.js  index.b1d12f4f.js  index.d75ab9a2.js  pp8085_lib.819ef5e9.js  pp8085_lib.9f99400c.js  pp8085_lib_bg.0f5221cd.wasm  pp8085_lib_bg.1d61c33d.wasm  pp8085_lib_bg.7cca6750.js  pp8085_lib_bg.9576ea14.js
backend/: CMakeLists.txt  run.sh
backend/src/: CMakeLists.txt  Micro8085.cpp  assembler.cpp  assembler.hpp  debugger.cpp  debugger.hpp  instructions.cpp  instructions.hpp  interrupts.cpp  interrupts.hpp  io.cpp  io.hpp  memory.cpp  memory.hpp  registers.cpp  registers.hpp
examples/: sertest.asm
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/components/: CodeEditor.tsx  ControlPanel.tsx  DebuggerPanel.tsx  Emulator.tsx  IOView.tsx  MemoryView.tsx
www/: package-lock.json  package.json  vite.config.ts
www/src/components/: footer.tsx  header.tsx
